--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "@testing-library/user-event": "^13.5.0",
     "gh-pages": "^6.1.1",
     "react": "^18.3.1",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.25.1",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
